fix create-update order