@@ -1,7 +1,9 @@
 package org.example.orderservice.service;
 
+import feign.FeignException;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 import jakarta.transaction.Transactional;
+import org.example.orderservice.dto.StockChange;
 import org.example.orderservice.dto.order.OrderItemDraft;
 import org.example.orderservice.dto.order.ItemToOrder;
 import org.example.orderservice.dto.ProductDto;
@@ -12,9 +14,7 @@ import org.example.orderservice.enums.OrderStatus;
 import org.example.orderservice.kafka.KafkaProducer;
 import org.example.orderservice.openfeign.InventoryClient;
 import org.example.orderservice.openfeign.ProductClient;
-import org.example.orderservice.repositories.OrderItemsRepository;
 import org.example.orderservice.repositories.OrderRepository;
-import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -29,16 +29,12 @@ import java.util.stream.Collectors;
 @Service
 public class OrderService {
 
-    private final ModelMapper modelMapper = new ModelMapper();
 
     @Autowired
     private KafkaProducer kafkaProducer;
 
     @Autowired
     private OrderRepository orderRepository;
-
-    @Autowired
-    private OrderItemsRepository orderItemsRepository;
 
     @Autowired
     private InventoryClient inventoryClient;
@@ -69,13 +65,27 @@ public class OrderService {
     }
 
     @CircuitBreaker(name = "validation")
-    private void stockReduction(OrderItems itemToOrder){
-        inventoryClient.deductionStock(itemToOrder.getSku(), itemToOrder.getQuantity());
+    private void stockReduction(List<OrderItems> stocks){
+        List<StockChange> l = new ArrayList<>();
+        stocks.forEach(i -> {
+            StockChange s = new StockChange();
+            s.setQuantity(i.getQuantity());
+            s.setSku(i.getSku());
+            l.add(s);
+        });
+        inventoryClient.deductionStock(l);
     }
 
     @CircuitBreaker(name = "validation")
-    private void stockAddition(OrderItems itemToReject){
-        inventoryClient.additionStock(itemToReject.getSku(), itemToReject.getQuantity());
+    private void stockAddition(List<OrderItems> stocks){
+        List<StockChange> l = new ArrayList<>();
+        stocks.forEach(i -> {
+            StockChange s = new StockChange();
+            s.setQuantity(i.getQuantity());
+            s.setSku(i.getSku());
+            l.add(s);
+        });
+        inventoryClient.additionStock(l);
     }
 
     // Verifico l'esistenza e la disponibilità del prodotto
@@ -84,17 +94,17 @@ public class OrderService {
         List<OrderItemDraft> orderDraftLs = new ArrayList<>();
 
         // Per ogni elemento della lista
-        for (int i = 0; i < itemToOrder.size(); i++) {
+        for (ItemToOrder toOrder : itemToOrder) {
 
             // OpendFeign + CircuitBreaker - verifico l'esistenza del prodotto
-            ProductDto p = productValidation(itemToOrder.get(i));
+            ProductDto p = productValidation(toOrder);
 
             // OpenFeign + CircuitBreaker - verifico la disponibilità in stock
-            stockValidation(itemToOrder.get(i));
+            stockValidation(toOrder);
 
             // Se esistente e presente in magazzino popolo una lista ordine di bozza che ritorno (OrderItemsDraft)
             OrderItemDraft orderItemDraft = new OrderItemDraft();
-            orderItemDraft.setQuantity(itemToOrder.get(i).getQuantity());
+            orderItemDraft.setQuantity(toOrder.getQuantity());
             orderItemDraft.setSku(p.getSku());
             orderItemDraft.setPrice(p.getPrice());
             orderDraftLs.add(orderItemDraft);
@@ -117,7 +127,7 @@ public class OrderService {
     }
 
     //! GET SINGLE ORDER
-    public Order getSingleOrderById(UUID orderId, UUID userId, String usRole) throws Exception{
+    public Order getSingleOrderById(UUID orderId, UUID userId, String usRole) {
         Order o = orderRepository.findByIdAndDeletedFalse(orderId).orElseThrow(()->new RuntimeException("Nessun ordine trovato"));
 
         if (usRole.equals("ROLE_ADMIN") || (usRole.equals("ROLE_USER") && userId.equals(o.getUserId())) ) {
@@ -141,21 +151,19 @@ public class OrderService {
         Order order = new Order();
         order.setOrderStatus(OrderStatus.BOZZA);
         order.setActive(true);
-        System.out.println("DEBUG: Stato ordine prima del save: " + order.getActive());
 
         // Assegno l'utente all'ordine
         order.setUserId(userId);
 
         // Mappo la lista degli items prodotto, in bozza, nella lista da salvare nell'ordine
         List<OrderItems> items = orderDraft.stream()
-                .map( itemDraft -> {
-                    OrderItems item = convertOrderDraftToOrderItems(itemDraft);
-                    stockReduction(item);
-                    // Assengno l'ordine di riferimento ad ogni item
-                    item.setOrder(order);
-                    return  item;
-                        })
-                .collect(Collectors.toList());
+                    .map(itemDraft -> {
+                        OrderItems item = convertOrderDraftToOrderItems(itemDraft);
+                        // Assegno l'ordine di riferimento
+                        item.setOrder(order);
+                        return item;
+                    })
+                    .toList();
 
         // Calcolo il totale dell'ordine
         BigDecimal total = items.stream().map(i -> i.getUnitPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
@@ -165,9 +173,10 @@ public class OrderService {
         order.setOrderItems(items);
         order.setTotal(total);
         orderRepository.save(order);
-        System.out.println("DEBUG: Stato ordine prima del save: " + order.getActive());
-        kafkaProducer.sendMessage(MESSAGE.formatted(order.getUserId(), order.getId()));
+        // Riduzione dallo stock
+        stockReduction(items);
 
+        kafkaProducer.sendMessage(MESSAGE.formatted(order.getUserId(), order.getId()));
     }
 
     //! UPDATE
@@ -184,8 +193,7 @@ public class OrderService {
         if (order.getOrderStatus() != OrderStatus.BOZZA) throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "L'ordine è già in fase avanzata");
 
         // Ricarico la disponibilità per la lista prodotti precedente
-        order.getOrderItems().forEach(this::stockAddition);
-
+        stockAddition(order.getOrderItems());
 
         // Valido i prodotti inseriti
         List<OrderItemDraft> orderDraft = orderValidation(itemList);
@@ -194,12 +202,11 @@ public class OrderService {
         List<OrderItems> items = orderDraft.stream()
                 .map( itemDraft -> {
                     OrderItems item = convertOrderDraftToOrderItems(itemDraft);
-                    stockReduction(item);
                     item.setOrder(order);
-                    // Assengno l'ordine di riferimento ad ogni item
+                    // Assengno l'ordine di riferimento a ogni item
                     return  item;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // Calcolo il totale dell'ordine
         BigDecimal total = items.stream().map(i -> i.getUnitPrice().multiply(BigDecimal.valueOf(i.getQuantity())))
@@ -210,6 +217,7 @@ public class OrderService {
         order.getOrderItems().addAll(items);
         order.setTotal(total);
         orderRepository.save(order);
+        stockReduction(items);
     }
 
     //! CHANGE ORDER STATUS
@@ -234,7 +242,7 @@ public class OrderService {
 
     //!DeActive
     // Disattivazione ordine
-    public void deactiveOrder(UUID orderId) throws Exception {
+    public void deactiveOrder(UUID orderId) {
         Order order = orderRepository.findOrderById(orderId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ordine non trovato!"));
         order.setActive(false);
         orderRepository.save(order);
@@ -242,7 +250,7 @@ public class OrderService {
 
     //! ReActive
     // Riattivazione ordine
-    public void reactivateOrder(UUID orderId) throws Exception {
+    public void reactivateOrder(UUID orderId) {
 
         Order order = orderRepository.findOrderById(orderId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ordine non trovato!"));
         if (order.getDeleted()) throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Ordine eliminato, non è possibile riattivarlo!");
@@ -253,11 +261,11 @@ public class OrderService {
 
     //! DELETE
     // Soft delete
-    public void deleteOrder(UUID orderId) throws Exception {
+    public void deleteOrder(UUID orderId) {
         Order order = orderRepository.findOrderById(orderId).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Ordine non trovato!"));
 
         // Ricarico la disponibilità per la lista prodotti precedente
-        order.getOrderItems().forEach(this::stockAddition);
+        stockAddition(order.getOrderItems());
         order.setDeleted(true);
         order.setActive(false);
         orderRepository.save(order);
